--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -789,12 +789,20 @@ body{
   display: flex;
 }
 
+.table{
+  display: table;
+}
+
 .aspect-square{
   aspect-ratio: 1 / 1;
 }
 
 .w-1\/3{
   width: 33.333333%;
+}
+
+.table-auto{
+  table-layout: auto;
 }
 
 .flex-col{
@@ -811,6 +819,10 @@ body{
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-3{
+  gap: 0.75rem;
 }
 
 .self-center{
@@ -841,16 +853,6 @@ body{
 .bg-neutral-900{
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
-}
-
-.bg-slate-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.bg-neutral-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
 }
 
 .p-2{
@@ -884,6 +886,11 @@ body{
   line-height: 1rem;
 }
 
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -891,6 +898,11 @@ body{
 .text-purple-500{
   --tw-text-opacity: 1;
   color: rgb(168 85 247 / var(--tw-text-opacity));
+}
+
+.text-red-400{
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
 .text-red-800{
@@ -901,6 +913,11 @@ body{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-yellow-400{
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
 .shadow-lg{
@@ -936,6 +953,10 @@ body *{
 
 h1,h2,h3,h4,h5{
   color:white;
+}
+
+th, td {
+  padding: 1rem;
 }
 
 .endGameInput{
