--- a/public/resources/css/input.css
+++ b/public/resources/css/input.css
@@ -26,8 +26,12 @@ h1,h2,h3,h4,h5{
   color:white;
 }
 
-th, td {
-  padding: 1rem;
+*:focus {
+  outline: none;
+}
+
+input,button,select:focus{
+  outline: none;
 }
 
 .endGameInput{
