--- a/public/resources/css/input.css
+++ b/public/resources/css/input.css
@@ -99,6 +99,27 @@ input,button,select:focus{
   flex-direction: column;
 }
 
+.powerUp{
+  font-size: clamp(1em,2.5vw,2em);
+  color:rgb(196, 116, 196);
+  animation: animate;
+  left:0px;
+  top:0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position:absolute;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-duration: 2.5s;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes animate {
+  from{left:0%};
+  to{left:100%};
+}
+
 .input-group{
   display: flex;
   flex-direction: column;
