--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -853,18 +853,6 @@ body{
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .self-center{
   align-self: center;
 }
@@ -909,10 +897,6 @@ body{
 
 .text-center{
   text-align: center;
-}
-
-.align-baseline{
-  vertical-align: baseline;
 }
 
 .text-2xl{
@@ -1082,6 +1066,32 @@ input,button,select:focus{
 .formGroup{
   display: flex;
   flex-direction: column;
+}
+
+.powerUp{
+  font-size: clamp(1em,2.5vw,2em);
+  color:rgb(196, 116, 196);
+  animation: animate;
+  left:0px;
+  top:0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position:absolute;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-duration: 2.5s;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes animate {
+  from{
+    left:0%
+  };
+
+  to{
+    left:100%
+  };
 }
 
 .input-group{
