--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -769,8 +769,16 @@ body{
   --tw-backdrop-sepia:  ;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .relative{
   position: relative;
+}
+
+.top-full{
+  top: 100%;
 }
 
 .m-0{
@@ -859,6 +867,10 @@ body{
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.whitespace-normal{
+  white-space: normal;
 }
 
 .rounded-md{
@@ -1070,7 +1082,6 @@ input,button,select:focus{
 
 .powerUp{
   font-size: clamp(1em,2.5vw,2em);
-  color:rgb(196, 116, 196);
   animation: animate;
   left:0px;
   top:0px;
@@ -1082,6 +1093,18 @@ input,button,select:focus{
   animation-iteration-count: infinite;
   animation-duration: 2.5s;
   animation-timing-function: ease-in-out;
+}
+
+.doublePoints{
+  color:rgb(196, 116, 196);
+}
+
+.invencible{
+  color:rgb(34 211 238);
+}
+
+.penetratingBullets{
+  color:rgb(250 204 21);
 }
 
 @keyframes animate {
