--- a/public/resources/css/input.css
+++ b/public/resources/css/input.css
@@ -90,8 +90,15 @@ input,button,select:focus{
   width: 10px;
   aspect-ratio: 1/1;
   border-radius: 50%;
-  background-color:  violet; 
   position:absolute;
+}
+
+.normal{
+  background-color:  violet; 
+}
+
+.penetrating{
+  background-color: rgb(250 204 21);
 }
 
 .formGroup{
