--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -642,8 +642,8 @@ select{
 }
 
 h1{
-  font-size: 3rem;
-  line-height: 1;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
   font-weight: 700;
 }
 
@@ -777,6 +777,46 @@ body{
   position: relative;
 }
 
+.bottom-5{
+  bottom: 1.25rem;
+}
+
+.left-1\/3{
+  left: 33.333333%;
+}
+
+.left-\[40\%\]{
+  left: 40%;
+}
+
+.left-\[45\%\]{
+  left: 45%;
+}
+
+.left-\[48\%\]{
+  left: 48%;
+}
+
+.left-full{
+  left: 100%;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-2\/3{
+  top: 66.666667%;
+}
+
+.top-\[25\%\]{
+  top: 25%;
+}
+
+.top-\[45\%\]{
+  top: 45%;
+}
+
 .top-full{
   top: 100%;
 }
@@ -793,6 +833,18 @@ body{
   margin-bottom: 1rem;
 }
 
+.mb-8{
+  margin-bottom: 2rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
+}
+
 .flex{
   display: flex;
 }
@@ -801,16 +853,61 @@ body{
   display: table;
 }
 
+.hidden{
+  display: none;
+}
+
 .aspect-square{
   aspect-ratio: 1 / 1;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
+}
+
+.size-10{
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-8{
+  width: 2rem;
+  height: 2rem;
 }
 
 .w-1\/3{
   width: 33.333333%;
 }
 
+.w-2\/3{
+  width: 66.666667%;
+}
+
+.w-3\/4{
+  width: 75%;
+}
+
+.w-full{
+  width: 100%;
+}
+
 .table-auto{
   table-layout: auto;
+}
+
+.rotate-12{
+  --tw-rotate: 12deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.animate-pulse{
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .flex-col{
@@ -861,6 +958,12 @@ body{
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .self-center{
   align-self: center;
 }
@@ -873,8 +976,24 @@ body{
   white-space: normal;
 }
 
+.whitespace-pre{
+  white-space: pre;
+}
+
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-4{
@@ -885,14 +1004,28 @@ body{
   border-width: 8px;
 }
 
+.border-purple-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(192 132 252 / var(--tw-border-opacity));
+}
+
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-white\/50{
+  border-color: rgb(255 255 255 / 0.5);
+}
+
 .bg-neutral-900{
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+
+.bg-purple-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
 }
 
 .p-2{
@@ -907,6 +1040,10 @@ body{
   padding: 1rem;
 }
 
+.pl-4{
+  padding-left: 1rem;
+}
+
 .text-center{
   text-align: center;
 }
@@ -919,6 +1056,21 @@ body{
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-base{
@@ -938,6 +1090,21 @@ body{
 .text-lime-400{
   --tw-text-opacity: 1;
   color: rgb(163 230 53 / var(--tw-text-opacity));
+}
+
+.text-lime-500{
+  --tw-text-opacity: 1;
+  color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+
+.text-orange-400{
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-purple-400{
+  --tw-text-opacity: 1;
+  color: rgb(192 132 252 / var(--tw-text-opacity));
 }
 
 .text-purple-500{
@@ -976,6 +1143,11 @@ body{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-violet-300\/50{
+  --tw-shadow-color: rgb(196 181 253 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .shadow-white\/40{
   --tw-shadow-color: rgb(255 255 255 / 0.4);
   --tw-shadow: var(--tw-shadow-colored);
@@ -984,6 +1156,20 @@ body{
 .outline-none{
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.invert{
+  --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.sepia{
+  --tw-sepia: sepia(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .bg-hero-bubbles{
@@ -1042,11 +1228,11 @@ input,button,select:focus{
 }
 
 .enabled{
-  color: red;
+  filter: invert(13%) sepia(84%) saturate(7087%) hue-rotate(359deg) brightness(98%) contrast(108%);
 }
 
 .dissabled{
-  color: grey;
+  filter: invert(55%) sepia(7%) saturate(16%) hue-rotate(10deg) brightness(90%) contrast(85%);
 }
 
 .player{
@@ -1067,19 +1253,35 @@ input,button,select:focus{
   font-size: 2em;
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 .bullet{
-  width: 10px;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
   position:absolute;
 }
 
 .normal{
+  width: 10px;
   background-color:  violet;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
 }
 
 .penetrating{
-  background-color: rgb(250 204 21);
+  /*background-color: rgb(250 204 21);*/
+  position:absolute;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid rgb(250 204 21);
+  background-color: 10px solid rgb(250 204 21);
+  border-radius: 0%;
 }
 
 .formGroup{
@@ -1089,7 +1291,7 @@ input,button,select:focus{
 
 .powerUp{
   font-size: clamp(1em,2.5vw,2em);
-  animation: animate;
+  animation: sideways;
   left:0px;
   top:0px;
   display: flex;
@@ -1114,13 +1316,27 @@ input,button,select:focus{
   color:rgb(250 204 21);
 }
 
-@keyframes animate {
+.oculto{
+  display: none !important;
+}
+
+@keyframes sideways {
   from{
     left:0%
   };
 
   to{
     left:100%
+  };
+}
+
+@keyframes fadeInOut {
+  from{
+    opacity: 0
+  };
+
+  to{
+    opacity: 100
   };
 }
 
@@ -1139,6 +1355,10 @@ input,button,select:focus{
 }
 
 @media (min-width: 1024px){
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
   .lg\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
