--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -777,60 +777,12 @@ body{
   position: relative;
 }
 
-.bottom-5{
-  bottom: 1.25rem;
-}
-
-.left-1\/3{
-  left: 33.333333%;
-}
-
-.left-1\/4{
-  left: 25%;
-}
-
-.left-\[40\%\]{
-  left: 40%;
-}
-
-.left-\[45\%\]{
-  left: 45%;
-}
-
-.left-\[48\%\]{
-  left: 48%;
-}
-
 .left-full{
   left: 100%;
 }
 
-.right-1\/4{
-  right: 25%;
-}
-
 .top-0{
   top: 0px;
-}
-
-.top-1\/2{
-  top: 50%;
-}
-
-.top-1\/4{
-  top: 25%;
-}
-
-.top-2\/3{
-  top: 66.666667%;
-}
-
-.top-\[25\%\]{
-  top: 25%;
-}
-
-.top-\[45\%\]{
-  top: 45%;
 }
 
 .top-full{
@@ -853,12 +805,24 @@ body{
   margin-bottom: 2rem;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
 
 .mt-8{
   margin-top: 2rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.block{
+  display: block;
 }
 
 .flex{
@@ -877,8 +841,9 @@ body{
   aspect-ratio: 1 / 1;
 }
 
-.aspect-video{
-  aspect-ratio: 16 / 9;
+.size-32{
+  width: 8rem;
+  height: 8rem;
 }
 
 .size-8{
@@ -890,10 +855,6 @@ body{
   width: 33.333333%;
 }
 
-.w-2\/3{
-  width: 66.666667%;
-}
-
 .w-3\/4{
   width: 75%;
 }
@@ -902,22 +863,8 @@ body{
   width: 100%;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
 .table-auto{
   table-layout: auto;
-}
-
-.rotate-12{
-  --tw-rotate: 12deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-340{
-  --tw-rotate: 340deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @keyframes pulse{
@@ -972,6 +919,12 @@ body{
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -982,6 +935,12 @@ body{
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
 .self-center{
@@ -1000,8 +959,8 @@ body{
   white-space: pre;
 }
 
-.rounded-full{
-  border-radius: 9999px;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-md{
@@ -1034,14 +993,19 @@ body{
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-lime-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(217 249 157 / var(--tw-border-opacity));
+}
+
+.border-lime-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(163 230 53 / var(--tw-border-opacity));
+}
+
 .bg-neutral-900{
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
-}
-
-.bg-purple-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
 }
 
 .p-2{
@@ -1084,11 +1048,6 @@ body{
   line-height: 1;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1099,28 +1058,23 @@ body{
   line-height: 1rem;
 }
 
-.font-bold{
-  font-weight: 700;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.text-blue-400{
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .text-lime-400{
   --tw-text-opacity: 1;
   color: rgb(163 230 53 / var(--tw-text-opacity));
-}
-
-.text-lime-500{
-  --tw-text-opacity: 1;
-  color: rgb(132 204 22 / var(--tw-text-opacity));
-}
-
-.text-orange-400{
-  --tw-text-opacity: 1;
-  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
 .text-purple-400{
@@ -1143,6 +1097,11 @@ body{
   color: rgb(153 27 27 / var(--tw-text-opacity));
 }
 
+.text-rose-700{
+  --tw-text-opacity: 1;
+  color: rgb(190 18 60 / var(--tw-text-opacity));
+}
+
 .text-violet-400{
   --tw-text-opacity: 1;
   color: rgb(167 139 250 / var(--tw-text-opacity));
@@ -1162,11 +1121,6 @@ body{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-violet-300\/50{
-  --tw-shadow-color: rgb(196 181 253 / 0.5);
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .shadow-white\/40{
@@ -1298,17 +1252,21 @@ input,button,select:focus{
 
 .powerUp{
   font-size: clamp(1em,2.5vw,2em);
-  animation: sideways;
   left:0px;
   top:0px;
   display: flex;
   justify-content: center;
   align-items: center;
   position:absolute;
+  animation: sideways;
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-duration: 2.5s;
   animation-timing-function: ease-in-out;
+}
+
+.svg-crimson{
+  filter: invert(11%) sepia(83%) saturate(5613%) hue-rotate(342deg) brightness(104%) contrast(91%);
 }
 
 .doublePoints{
@@ -1325,6 +1283,14 @@ input,button,select:focus{
 
 .oculto{
   display: none !important;
+}
+
+.arrow-up{
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 15px solid #c084fc;
 }
 
 @keyframes sideways {
@@ -1356,18 +1322,51 @@ input,button,select:focus{
   color:crimson;
 }
 
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.hover\:animate-pulse:hover{
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+.hover\:text-red-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 .focus\:border-green-400:focus{
   --tw-border-opacity: 1;
   border-color: rgb(74 222 128 / var(--tw-border-opacity));
 }
 
-@media (min-width: 1024px){
-  .lg\:w-1\/2{
-    width: 50%;
+.group:hover .group-hover\:relative{
+  position: relative;
+}
+
+@keyframes leftRight{
+  0%{
+    right: 0%;
   }
 
-  .lg\:w-1\/3{
-    width: 33.333333%;
+  100%{
+    right: 6%;
+  }
+}
+
+.group:hover .group-hover\:animate-leftRight{
+  animation: leftRight 1s alternate infinite ease-in-out;
+}
+
+@media (min-width: 1024px){
+  .lg\:absolute{
+    position: absolute;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
   }
 
   .lg\:text-base{
