--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -781,20 +781,16 @@ body{
   left: 100%;
 }
 
+.right-full{
+  right: 100%;
+}
+
 .top-0{
   top: 0px;
 }
 
 .top-full{
   top: 100%;
-}
-
-.right-0{
-  right: 0px;
-}
-
-.right-full{
-  right: 100%;
 }
 
 .m-0{
@@ -825,6 +821,10 @@ body{
   margin-top: 0.5rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .mt-8{
   margin-top: 2rem;
 }
@@ -849,9 +849,9 @@ body{
   aspect-ratio: 1 / 1;
 }
 
-.size-10{
-  width: 2.5rem;
-  height: 2.5rem;
+.size-14{
+  width: 3.5rem;
+  height: 3.5rem;
 }
 
 .size-32{
@@ -862,21 +862,6 @@ body{
 .size-8{
   width: 2rem;
   height: 2rem;
-}
-
-.size-20{
-  width: 5rem;
-  height: 5rem;
-}
-
-.size-16{
-  width: 4rem;
-  height: 4rem;
-}
-
-.size-14{
-  width: 3.5rem;
-  height: 3.5rem;
 }
 
 .w-1\/3{
@@ -1050,10 +1035,6 @@ body{
 
 .pl-4{
   padding-left: 1rem;
-}
-
-.pr-2{
-  padding-right: 0.5rem;
 }
 
 .pr-3{
@@ -1333,6 +1314,15 @@ input,button,select:focus{
   border-bottom: 15px solid #c084fc;
 }
 
+.menu_button{
+  box-shadow: 0 10px rgb(126 34 206);
+}
+
+.menu_button:active{
+  box-shadow: 0 5px rgb(192 132 252);
+  transform: translate(0px,5px);
+}
+
 .form-icon{
   filter: invert(57%) sepia(87%) saturate(1379%) hue-rotate(219deg) brightness(97%) contrast(104%);
 }
@@ -1386,24 +1376,24 @@ input,button,select:focus{
   color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 
-@keyframes pulse{
-  50%{
-    opacity: .5;
-  }
-}
-
-.focus\:animate-pulse:focus{
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-.focus\:border-green-400:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity));
-}
-
 .focus\:border-purple-400:focus{
   --tw-border-opacity: 1;
   border-color: rgb(192 132 252 / var(--tw-border-opacity));
+}
+
+.active\:translate-y-\[5px\]:active{
+  --tw-translate-y: 5px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:border-purple-300:active{
+  --tw-border-opacity: 1;
+  border-color: rgb(216 180 254 / var(--tw-border-opacity));
+}
+
+.active\:text-red-500:active{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:relative{
