--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -976,10 +976,6 @@ body{
   border-radius: 0.25rem;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .rounded-sm{
   border-radius: 0.125rem;
 }
@@ -1290,6 +1286,10 @@ input,button,select:focus{
   filter: invert(11%) sepia(83%) saturate(5613%) hue-rotate(342deg) brightness(104%) contrast(91%);
 }
 
+.help{
+  filter: invert(92%) sepia(98%) saturate(1028%) hue-rotate(24deg) brightness(106%) contrast(79%);
+}
+
 .doublePoints{
   color:rgb(196, 116, 196);
 }
@@ -1379,11 +1379,6 @@ input,button,select:focus{
 .focus\:border-purple-400:focus{
   --tw-border-opacity: 1;
   border-color: rgb(192 132 252 / var(--tw-border-opacity));
-}
-
-.active\:translate-y-\[5px\]:active{
-  --tw-translate-y: 5px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .active\:border-purple-300:active{
