--- a/public/resources/css/main.css
+++ b/public/resources/css/main.css
@@ -769,6 +769,10 @@ body{
   --tw-backdrop-sepia:  ;
 }
 
+.invisible{
+  visibility: hidden;
+}
+
 .absolute{
   position: absolute;
 }
@@ -894,6 +898,10 @@ body{
 
 .w-3\/4{
   width: 75%;
+}
+
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .w-full{
@@ -1054,10 +1062,6 @@ body{
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
 }
 
-.bg-neutral-900\/75{
-  background-color: rgb(23 23 23 / 0.75);
-}
-
 .bg-neutral-900\/92{
   background-color: rgb(23 23 23 / .92);
 }
@@ -1080,6 +1084,10 @@ body{
 
 .pr-3{
   padding-right: 0.75rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
 }
 
 .text-center{
@@ -1153,6 +1161,11 @@ body{
 .text-red-400{
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-red-700{
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
 }
 
 .text-red-800{
@@ -1252,7 +1265,7 @@ input,button,select:focus{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: clamp(1em,2.5vw,2em);
+  font-size: clamp(1.5em,2.5vw,2em);
 }
 
 .enabled{
@@ -1334,6 +1347,10 @@ input,button,select:focus{
 
 .svg-crimson{
   filter: invert(11%) sepia(83%) saturate(5613%) hue-rotate(342deg) brightness(104%) contrast(91%);
+}
+
+.svg-alert{
+  filter: invert(18%) sepia(67%) saturate(3138%) hue-rotate(345deg) brightness(94%) contrast(102%);
 }
 
 .help{
@@ -1475,6 +1492,15 @@ input,button,select:focus{
 
   .md\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .md\:flex-row{
+    flex-direction: row;
+  }
+
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
